fix: hamburger menu bugs with navigation vertical align and color on our pets page

--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -201,6 +201,10 @@ html {
   }
 }
 
+.hamburger_white .hamburger__layout {
+  background-color: #FFFFFF;
+}
+
 .hamburger__button {
   display: none;
   position: relative;
@@ -330,14 +334,6 @@ html {
           transform: rotate(-90deg);
 }
 
-.header__navigation .hamburger__button:checked + .hamburger__line_dark {
-  background-color: #F1CDB3;
-}
-
-.header__navigation .hamburger__button:checked + .hamburger__line_dark::before, .header__navigation .hamburger__button:checked + .hamburger__line_dark::after {
-  background-color: #F1CDB3;
-}
-
 .header__navigation .hamburger__button:checked ~ .hamburger__layout {
   opacity: 1;
   -webkit-transform: translateX(320px);
@@ -375,21 +371,26 @@ html {
   .navigation {
     position: absolute;
     opacity: 0;
-    top: 188px;
+    top: 50%;
+    margin-top: -72px;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    height: 100vh;
     -webkit-transform: translateX(125px);
             transform: translateX(125px);
-    z-index: 10;
+    z-index: 1;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 3.2rem;
     line-height: 5.1rem;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    width: max-content;
     gap: 40.5px;
     text-align: center;
   }
@@ -428,6 +429,16 @@ html {
 }
 
 @media (min-width: 768px) and (max-width: 1279px) {
+  .navigation__item_dark a {
+    line-height: 170%;
+    color: #545454;
+  }
+  .navigation__item_dark a:hover {
+    color: #292929;
+  }
+}
+
+@media (max-width: 767px) {
   .navigation__item_dark a {
     line-height: 170%;
     color: #545454;
@@ -492,10 +503,10 @@ html {
 
 @media (max-width: 767px) {
   .navigation__item_dark-active a {
-    color: #FAFAFA;
+    color: #292929;
   }
   .navigation__item_dark-active a:hover {
-    color: #FAFAFA;
+    color: #292929;
   }
   .navigation__item_dark-active a::after {
     content: '';
